--- a/assets/scss/partials/_pricing.scss
+++ b/assets/scss/partials/_pricing.scss
@@ -55,7 +55,7 @@
 							button {
 								@include button;
 								position: absolute;
-								right:65px;
+								left:65px;
 								bottom: 37px;
 							}
 							&:hover{
