--- a/assets/scss/partials/_slider.scss
+++ b/assets/scss/partials/_slider.scss
@@ -1,6 +1,7 @@
 #slider {
+	
+		width:100%;
 	.container-fluid {
-		position: relative;
 		height: 750px;
 		background-image: url(../../images/slider.png);
 		background-position: center;
@@ -10,26 +11,29 @@
 		text-transform: uppercase;
 		text-align: center;
 		line-height: 30px;
-		h1 {
-			font-size: 48px;
-			font-weight: bold;
-			margin-top: 353px;
-		}
-		p {
-			font-size: 14px;
-			margin-top: 20px;
-		}
-		ul {
-			position:absolute;
-			top:691px;
-			left:900px;
-			li {
-				a {
-					color:rgba(255, 255, 255, 0.3);
-					width: 16px;
-					height: 16px;
-					.active {
-						color: #ffffff !important;
+		.container{
+			position: relative;
+			h1 {
+				font-size: 48px;
+				font-weight: bold;
+				margin-top: 353px;
+			}
+			p {
+				font-size: 14px;
+				margin-top: 20px;
+			}
+			ul {
+				position:absolute;
+				top:691px;
+				left:550px;
+				li {
+					a {
+						color:rgba(255, 255, 255, 0.3);
+						width: 16px;
+						height: 16px;
+						.active {
+							color: #ffffff !important;
+						}
 					}
 				}
 			}
