--- a/assets/scss/partials/_responsiveness.scss
+++ b/assets/scss/partials/_responsiveness.scss
@@ -57,9 +57,6 @@
 					.col-xs-9{
 						padding-bottom:20px;
 					}
-					button{
-						margin-top:420px;
-					}
 				}
 			}
 		}
@@ -111,6 +108,7 @@
 	#about{
 		.container-fluid{
 			.container{
+				padding-left:15px;
 				.row{
 					.col-md-6{
 						padding-left:0px;
@@ -126,6 +124,9 @@
 		.container-fluid{
 			.container{
 				.row{
+					.col-xs-2, .col-xs-10{
+						margin-top:20px;
+					}
 				}
 			}
 		}
