news is responsive

--- a/assets/scss/partials/_responsiveness.scss
+++ b/assets/scss/partials/_responsiveness.scss
@@ -221,4 +221,21 @@
 			}
 		}
 	}
+	#news{
+		.container-fluid{
+			.container{
+				.col-md-4{
+					.newsImage{
+						img{
+							width:100%;
+							margin-left:0px;
+							max-height:none;
+						}
+					}
+					.newsContent{
+					}
+				}
+			}
+		}
+	}
 }
