--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -983,9 +983,9 @@ body {
     color: #23282f;
     margin-bottom: 33px; }
   #news .container-fluid .container .col-md-4 {
-    padding-left: 0; }
+    padding: 0; }
     #news .container-fluid .container .col-md-4 .newsImage {
-      width: 360px;
+      width: 100%;
       height: 378px;
       background-color: #8d8d8d;
       overflow: hidden; }
@@ -995,24 +995,10 @@ body {
         margin-left: -90px; }
     #news .container-fluid .container .col-md-4 .newsContent {
       background-color: #e5eef0;
-      width: 360px;
+      width: 100%;
       height: 378px;
       padding: 53px 41px 0 41px;
-      text-align: center;
-      /*&:first-child{
-      	.newsContent::before{
-      		content:"";
-      		height:0px;
-      		width:0px;
-      		border-top:none;
-      		border-bottom:15px solid $thirdColor;
-      		border-left:10px solid transparent;
-      		border-right:10px solid transparent;
-      		position:absolute;
-      		top:-15px;
-      		left:555px;
-      		}	
-      	}*/ }
+      text-align: center; }
       #news .container-fluid .container .col-md-4 .newsContent span {
         display: block; }
         #news .container-fluid .container .col-md-4 .newsContent span:first-child {
@@ -1987,6 +1973,11 @@ body {
     padding-bottom: 50px; }
 
   #whatWeAre .container-fluid .row .col-md-6:last-child {
-    margin-top: 100px; } }
+    margin-top: 100px; }
+
+  #news .container-fluid .container .col-md-4 .newsImage img {
+    width: 100%;
+    margin-left: 0px;
+    max-height: none; } }
 
 /*# sourceMappingURL=style.css.map */
