--- a/assets/scss/partials/pages/_news.scss
+++ b/assets/scss/partials/pages/_news.scss
@@ -12,9 +12,9 @@
 				}
 			}
 			.col-md-4{
-				padding-left:0;
+				padding:0;
 				.newsImage{
-					width:360px;
+					width:100%;
 					height: 378px;
 					background-color: #8d8d8d;
 					overflow: hidden;
@@ -26,7 +26,7 @@
 				}
 				.newsContent{
 					background-color: $thirdColor;
-					width:360px;
+					width:100%;
 					height: 378px;
 					padding:53px 41px 0 41px;
 					text-align: center;
@@ -54,21 +54,6 @@
 					button{
 						@include button;
 					}
-					
-				/*&:first-child{
-					.newsContent::before{
-						content:"";
-						height:0px;
-						width:0px;
-						border-top:none;
-						border-bottom:15px solid $thirdColor;
-						border-left:10px solid transparent;
-						border-right:10px solid transparent;
-						position:absolute;
-						top:-15px;
-						left:555px;
-						}	
-					}*/
 					
 					news::after{
 						content:"";
