--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1978,6 +1978,9 @@ body {
   #news .container-fluid .container .col-md-4 .newsImage img {
     width: 100%;
     margin-left: 0px;
-    max-height: none; } }
+    max-height: none; }
+
+  #newsDetails .container .newsContent::before {
+    left: 340px; } }
 
 /*# sourceMappingURL=style.css.map */
