--- a/assets/scss/partials/_responsiveness.scss
+++ b/assets/scss/partials/_responsiveness.scss
@@ -247,4 +247,24 @@
 			}
 		}
 	}
+	#portfolio{
+		.container-fluid{
+			.container{
+				padding-left:15px;
+				.col-md-3{
+					padding:0;
+				}
+			}
+		}
+	}
+	#portfolioTwo{
+		.container{
+			.row{
+				padding-left:15px;
+				.col-md-6{
+					padding-left:0px;
+				}
+			}
+		}
+	}
 }
