--- a/assets/scss/partials/_responsiveness.scss
+++ b/assets/scss/partials/_responsiveness.scss
@@ -267,4 +267,42 @@
 			}
 		}
 	}
+	#services{
+		.container-fluid{
+			.container{
+				.serviceItem{
+					.col-md-2{
+						text-align: center;
+						padding-bottom:20px;
+					}
+					.col-md-10{
+						padding-left:0px;
+					}
+				}
+			}
+		}
+	}
+	#servicesTwo{
+		.container-fluid{
+			.container{
+				.col-md-4{
+					.serviceItem{
+						.col-md-3{
+							
+						}
+						.col-md-9{
+							h4{
+								margin-top:30px;
+							}
+						}
+					}
+				}
+				.col-md-8{
+					i{
+						margin-top:20px;
+					}
+				}
+			}
+		}
+	}
 }
